[gd_scene load_steps=14 format=2]

[ext_resource path="res://Drone artifact/drone_background.PNG" type="Texture" id=1]
[ext_resource path="res://Drone artifact/aerial_drone_body.png" type="Texture" id=2]
[ext_resource path="res://TopDroneBody.gd" type="Script" id=3]
[ext_resource path="res://BRLNSDB.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Background.gd" type="Script" id=5]
[ext_resource path="res://Drone artifact/side_drone_body.png" type="Texture" id=6]
[ext_resource path="res://SideDroneBody.gd" type="Script" id=7]
[ext_resource path="res://Drone artifact/Blue-Rectangle.png" type="Texture" id=8]
[ext_resource path="res://Drone artifact/1280px-White_box_55x90.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="ParentNode" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.697945, 0.843305 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="TopDroneBody" type="Sprite" parent="Background"]
position = Vector2( -600, -200 )
scale = Vector2( 0.35, 0.29 )
z_index = 1
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="SideDroneBody" type="Sprite" parent="Background"]
position = Vector2( -600, 0 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Background/SideDroneBody"]
position = Vector2( 2.49074, 11.8581 )
scale = Vector2( 0.0358836, 0.0303276 )
texture = ExtResource( 9 )

[node name="Tanklevel" type="Sprite" parent="Background/SideDroneBody"]
position = Vector2( 2.53171, 23.7162 )
scale = Vector2( 0.023, -0.0231603 )
z_index = 1
texture = ExtResource( 8 )
offset = Vector2( -23.4453, 512 )

[node name="DroneControlButton" type="Button" parent="Background"]
margin_left = -14.3279
margin_top = 308.311
margin_right = 251.672
margin_bottom = 342.311
custom_fonts/font = SubResource( 1 )
text = "Start/Stop Drone "

[node name="DroneTreatmentButton" type="Button" parent="Background"]
margin_left = 265.064
margin_top = 308.311
margin_right = 563.064
margin_bottom = 342.311
custom_fonts/font = SubResource( 2 )
text = "Start/Stop Treatment"

[node name="ExitButton" type="Button" parent="Background"]
margin_left = 577.567
margin_top = 308.0
margin_right = 702.567
margin_bottom = 342.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="InfoBoard" type="Label" parent="Background"]
margin_left = -721.0
margin_top = -11.0
margin_right = -533.0
margin_bottom = 182.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Info"

[connection signal="pressed" from="Background/DroneControlButton" to="Background" method="_on_DroneControlButton_pressed"]
[connection signal="pressed" from="Background/DroneTreatmentButton" to="Background" method="_on_DroneTreatmentButton_pressed"]
[connection signal="pressed" from="Background/ExitButton" to="Background" method="_on_ExitButton_pressed"]
